# textplease

./: .gitignore  CONFIGURATION.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  typecheck.yml  uv-lock-check.yml
examples/: LJSpeech-001_transcript.csv  config_example.yaml
tests/: test_audio_utils.py  test_deduplicate_segments.py  test_device_utils.py  test_gradio_ui.py  test_gradio_worker.py  test_model_reuse.py  test_pipeline.py  test_whisper_batching.py
textplease/: __init__.py  gradio_ui.py  gradio_worker.py  main.py  pipeline.py  segmenter.py  transcriber.py
textplease/backends/: __init__.py  nemo.py  transformers_pipeline.py
textplease/utils/: audio_utils.py  deduplicate_segments.py  device_utils.py  logging_config.py  time_utils.py
