[project]
name = "textplease"
version = "0.1.0"
authors = [
    { name = "Alina Lozovskaia", email = "alinailozovskaya@gmail.com" },
]
description = "Get a text transcription from an uploaded media file"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "sentence-transformers>=4.1.0",
    "peft>=0.15.2",
    "soundfile>=0.13.1",
    "transformers>=4.51.0",
    "torch>=2.0.0,<3.0.0",
    "torchaudio>=2.0.0,<3.0.0",
    "nemo-toolkit[asr]>=2.5.0",
    "requests>=2.32.3",
    "gradio>=6.0.1",
    "websockets>=10,<15",
    "scipy>=1.13.0",
    "torchcodec>=0.8.0",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff==0.12.0",
  "mypy==1.18.2",
  "pre-commit",
  "types-requests",
  "types-pyyaml>=6.0.12.20250915",
  "pandas-stubs>=2.3.2.250926",
]

[project.scripts]
textplease = "textplease.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["textplease*"]

[tool.ruff]
line-length = 119
exclude = [".venv", "dist", "build", "**/__pycache__", "*.egg-info", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
]
ignore = [
  "E501",  # handled by formatter
  "D100",  # ignore missing module docstrings
  "D203",  # blank line before class docstring (conflicts with D211)
  "D213",  # summary on second line (conflicts with D212)
]

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]
known-first-party = ["textplease"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
